MODELER-435
===========

 - Add 'data' field to 1-wire protocol


MODELER-456
===========

  - Add Micasaverde Vera protocol definition and controller
    configuration section to OpenRemote Designer (Marcus Redeker)


MODELER-416
===========

 - contentType attribute for HTTP protocol (Marcus Redeker)


MODELER-470
===========

  - EnOcean configuration (Rainer Hitz)



Designer 2.14.0 (2013-XX-XX Markab)
===================================

 New Features:

   - Z-Wave protocol configuration
   - panStamps Lagarto configuration (MODELER-397)
   - Round-robin database (RRD) configuration (MODELER-394)
   - Add Domintell configuration (MODELER-391)

 Fixes:

   - MODELER-346: regexp validation for IP fields in TCP
     and Telnet protocols were wrong. Validations have
     been disabled.
   - MODELER-384: Property form title is wrong for webview
     and color picker components
   - MODELER-360: Command, Sensor, Switch names are
     not correctly encoded/decoded
   - MODELER-385: Double scrollbar on widget selection
   - MODELER-395: Incorrect password field generated
     in panel.xml for Web element
   - MODELER-389: LazyInitializationException on
     Device.deviceAttrs
   - MODELER-396: org.springframework.orm.hibernate3.HibernateSystemException
     when saving UI design
   - MODELER-398: Setting a sensor on a Web element does not work
   - MODELER-392: Fractional Widget Coordinates when Browser
     has non-default zoom


Designer 2.13.9 (2013-03-30 Rosemary)
=====================================

Bug fix release:

  - MODELER-346: regexp validation for IP fields in TCP
    and Telnet protocols were wrong. Validations have
    been disabled (Juha Lindfors)
  - MODELER-348: Prevent caching of GWT Javascript files
    on client browser to avoid Javascript conflicts when
    upgrading to a newer Designer version (Eric Bariaux)
  - MODELER-360: Encoding of restricted characters in XML
    is now done properly for user entered names for 