@@ -1,3 +1,11 @@
+
+MODELER-513
+===========
+
+  - Add 'line ending' configuration to UDP protocol
+    (Simon Vincent)
+
+
 MODELER-435
 ===========
 
@@ -53,6 +61,7 @@ Designer 2.14.0 (2013-XX-XX Markab)
    - MODELER-398: Setting a sensor on a Web element does not work
    - MODELER-392: Fractional Widget Coordinates when Browser
      has non-default zoom
+
 
 
 Designer 2.13.9 (2013-03-30 Rosemary)
